feat: implements page layout keyboard

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,5 @@
     <title>Virtual Keyboard</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
